# zinc

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
doc/: todo.md  warnings.md
lib/: CMakeLists.txt  api.h  assert.c  assert.h  buffer.c  buffer.h  memory.h  result.h
test/: CMakeLists.txt  test.c  test_assert.c  test_buffer.c  test_buffer_list.c  test_csv_lex.c  test_csv_parse.c  test_csv_parse_tools.c  test_csv_write.c  test_data_frame.c  test_datetime.c  test_error.c  test_field_lex.c  test_input_char_file.c  test_input_string.c  test_input_string.h  test_list.c  test_memory.c  test_memory.h  test_os_unix.c  test_result.c  test_result.h  test_sort.c  test_sort.h  test_utf8.c  test_vector.c
zinc/: CMakeLists.txt  api.h  assert.c  assert.h  buffer.c  buffer.h  buffer_list.c  buffer_list.h  csv_lex.c  csv_lex.h  csv_parse.c  csv_parse.h  csv_write.c  csv_write.h  data_frame.c  data_frame.h  datetime.c  error.c  error.h  error_unit_test.c  error_unit_test.h  field.c  field.h  field_lex.c  field_lex.h  input.c  input.h  input_char.c  input_char.h  input_char_file.c  input_char_file.h  input_char_string.c  input_char_string.h  input_string.c  input_string.h  list.c  list.h  memory.c  memory.h  os_unix.c  (+12 more)
